[refactor] 여행지 리뷰 목록 및 My 여행지 리뷰 목록 조회 반환 DTO를 TripRecordReviewListResponseDto로 바꿈